name:                crosswords
version:             0.1.0.0
synopsis:            Simple crosswords generator
description:         Please see README.md
homepage:            https://github.com/swian/crosswords
license:             BSD3
license-file:        LICENSE
author:              Stanisław Swianiewicz
maintainer:          swian@post.pl
copyright:           2017 Stanisław Swianiewicz
category:            Tools
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable crosswords
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Lib.Crossword
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , lens
